# rtsp-alpr-poller

./: .gitignore  COMPARISON.md  README.md
bash/: poller.sh
bun/: poller.ts
cpp/: CMakeLists.txt  poller.cpp
dart/: poller.dart
elixir/: poller.exs
go/: SETUP.md  go.mod  main.go
java/: pom.xml
java/src/main/java/com/alpr/: RtspPoller.java
nodejs/: package.json  poller.js
python/: poller.py  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
